burgermenu z-index fix

--- a/css/stylesBurger.scss
+++ b/css/stylesBurger.scss
@@ -16,10 +16,12 @@ $fontSizeMenu : 18px;
   justify-content: center;
   white-space: pre-line;
 
+  z-index: 9999;
+
 
 
   .menuLink{
-  display: block;
+  display: none;
 
   }
 
@@ -34,6 +36,7 @@ $fontSizeMenu : 18px;
     font-size: $fontSizeMenu;
     flex-wrap: nowrap;
     line-break: revert;
+
   }
 }
 
